--- a/code/TDC/backend/TDC.Backend/appsettings.json
+++ b/code/TDC/backend/TDC.Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=TDC;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
