--- a/code/TDC/backend/TDC.Backend/appsettings.json
+++ b/code/TDC/backend/TDC.Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TDC;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Sql": "Server=localhost;Database=TDC;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
