added test setup

--- a/code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj
+++ b/code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj
@@ -29,7 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="RepositoryTests\" />
+    <None Update="appsettings.dbtest.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
