--- a/.github/workflows/TDC_Build_Pipeline.yaml
+++ b/.github/workflows/TDC_Build_Pipeline.yaml
@@ -172,7 +172,7 @@ jobs:
 
       # Backend-Tests ausführen 
       - name: Run backend tests
-        run: dotnet test code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj --configuration Release --no-build
+        run: dotnet test code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj --configuration Release 
 
       # Artefakte hochladen
       - name: Upload Backend Artifact
