--- a/.github/workflows/TDC_Build_Pipeline.yaml
+++ b/.github/workflows/TDC_Build_Pipeline.yaml
@@ -172,9 +172,23 @@ jobs:
 
       # Backend-Tests ausführen 
       - name: Run backend tests
-        run: dotnet test code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj --configuration Release 
+        run: dotnet test code/TDC/TDC-Backend.Test/TDC.Backend.Test.csproj --configuration Release --logger "junit;LogFilePath=./output/backend-test-results/backend-unit-tests.xml"
 
-      # Artefakte hochladen
+      # Upload der Backend-Testergebnisse
+      - name: Upload Backend Unit Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-unit-test-results
+          path: ./output/backend-test-results/backend-unit-tests.xml
+      
+      # Tests im GitHub Actions UI anzeigen
+      - name: Report backend unit test results to GitHub Actions
+        uses: dorny/test-reporter@v1
+        with:
+          reporter: junit
+          test_results: ./output/backend-test-results/backend-unit-tests.xml
+      
+      # Build-Artefakte hochladen
       - name: Upload Backend Artifact
         uses: actions/upload-artifact@v4
         with:
