--- a/.github/workflows/TDC_Build_Pipeline.yaml
+++ b/.github/workflows/TDC_Build_Pipeline.yaml
@@ -183,12 +183,21 @@ jobs:
       - name: Wait for SQL Server to be ready
         run: |
           for i in {1..30}; do
-            nc -z sqlserver 1433 && echo "SQL Server is up!" && break
+            nc -z localhost 1433 && echo "SQL Server is up!" && break
             echo "Waiting for SQL Server..."
             sleep 2
           done
 
-     # Datenbank 'TDC.Test' erstellen
+      # sqlcmd installieren
+      - name: Install sqlcmd
+        run: |
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/msprod.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
+          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> $GITHUB_ENV
+
+      # Datenbank 'TDC.Test' erstellen
       - name: Create TDC.Test database
         run: |
           /opt/mssql-tools/bin/sqlcmd -S sqlserver -U sa -P ${{ secrets.SQL_SERVER_PASSWORD }} -Q "IF DB_ID('TDC.Test') IS NULL CREATE DATABASE [TDC.Test];"
