--- a/.github/workflows/TDC_Build_Pipeline.yaml
+++ b/.github/workflows/TDC_Build_Pipeline.yaml
@@ -68,6 +68,13 @@ jobs:
       - name: Build and Publish Windows App
         run: dotnet publish code/TDC/mobile/TDC/TDC.csproj -c Release -f net9.0-windows10.0.19041.0 -o ./output/windows
 
+              # Artefakte hochladen
+      - name: Upload Windows Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-artifact
+          path: ./output/windows
+
   buildAndroid:
     runs-on: windows-2022
 
@@ -118,6 +125,13 @@ jobs:
       #Tests ausführen
       - name: Run tests
         run: dotnet test --no-build --configuration Release ./code/TDC/mobile/TDC/TDC.csproj
+
+              # Build-Artefakte hochladen
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-artifact
+          path: ./output/android
 
   buildBackend:
     runs-on: ubuntu-latest
