--- a/code/TDC/backend/TDC.Backend/Properties/launchSettings.json
+++ b/code/TDC/backend/TDC.Backend/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7049;http://localhost:5091",
+      "applicationUrl": "https://192.168.0.98:7049;http://192.168.0.98:5091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
