--- a/code/TDC/mobile/TDC/TDC.csproj
+++ b/code/TDC/mobile/TDC/TDC.csproj
@@ -72,6 +72,12 @@
 	  <Compile Update="LoginShell.xaml.cs">
 	    <DependentUpon>LoginShell.xaml</DependentUpon>
 	  </Compile>
+	  <AndroidResource Update="Platforms\Android\Resources\xml\network_security_config.xml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </AndroidResource>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Update="Views\List\ListView.xaml.cs">
 	    <DependentUpon>ListView.xaml</DependentUpon>
 	  </Compile>
@@ -96,6 +102,12 @@
 	  <MauiXaml Update="Views\Profile\ProfilePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Platforms\Android\Resources\xml\network_security_config.xml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
