changed and added new sql migrations

--- a/code/TDC/backend/TDC.Backend/TDC.Backend.csproj
+++ b/code/TDC/backend/TDC.Backend/TDC.Backend.csproj
@@ -34,6 +34,15 @@
     <None Update="Database\migrations\V1_2_0__AddCharacterTables.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Database\migrations\V1_3_0__AddCharacterBodies.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Database\migrations\V1_3_1__AddCharacterFaces.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Database\migrations\V1_3_2__AddDefaultCharacterTable.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
